--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     },
     "devDependencies": {
         "nodemon": "^1.18.3"
+    },
+    "engines": {
+        "node": "10.6.0",
+        "npm": "6.1.0"
     }
 }
